# Open-Finance-LakeHouse

./: .dockerignore  .gitignore  Dockerfile  GUIA_ACESSO_FERRAMENTAS.md  LICENSE  README.md  catalog_entries.txt  config.json  docker-compose.yaml  fix_init_files.py  generate_pipelines.py  lakehouse_visualization_clean.py  pyproject.toml  requirements-cluster.txt  run_kedro_quiet.ps1  run_kedro_quiet.py  spark_diagnostics.ipynb  teste.py
airflow/config/: airflow.cfg
airflow/dags/: __init__.py  lakehouse_pipeline.py
airflow/dags/cluster/: ofl_backfill_dag.py
airflow/dags/lakehouse_pipelines/: __init__.py  dag_b3.py  dag_bacen_ipca.py  dag_bacen_selic.py  dag_bacen_usd_brl.py  dag_template.py  dag_yahoo_finance.py
airflow/dags/utils/: __init__.py  data_quality_operator.py  dremio_operators.py  gx_operators.py  lakefs_operators.py  metadata_operators.py
conf/: hadoop-metrics2.properties  log4j.properties  logging.properties  logging.yml
conf/base/: catalog.yml  mlflow.yml  parameters.yml  parameters_anbima.yml  parameters_b3.yml  parameters_bacen_series.yml  parameters_bronze.yml  parameters_cdi.yml  parameters_divida_pib.yml  parameters_eur_brl.yml  parameters_focus_pib.yml  parameters_ibge.yml  parameters_igp_10.yml  parameters_igp_di.yml  parameters_igp_m.yml  parameters_inpc.yml  parameters_ipca.yml  parameters_ipca_15.yml  parameters_ipea_receita.yml  parameters_over.yml  parameters_reservas_internacionais.yml  parameters_selic.yml  parameters_selic_meta.yml  parameters_tesouro_direto.yml  parameters_tlp.yml  parameters_usd_brl.yml  parameters_yahoo_finance.yml  spark.yml  spark.yml.backup
conf/cluster/: spark.yml
dags/: Open_Finance_Lakehouse_pipeline_dag.py
docker/: Dockerfile  Dockerfile.spark  README.md
docs/: DASHBOARD_HANDOFF.md
docs/architecture/: redesign.md
docs/source/: conf.py  index.rst
k8s/: run-pipeline-job.yaml
notebooks/: eda-2.ipynb  eda.ipynb  lakehouse_data_visualization.ipynb
notebooks/gx/: great_expectations.yml
notebooks/gx/expectations/: .ge_store_backend_id  silver_bacen_selic_suite.json  silver_cvm_if_di_suite.json
ofl/: __init__.py  cli.py  config.py  registry.py
ofl/ingestion/: __init__.py  anbima.py  b3.py  b3_arquivos.py  b3_cotahist.py  bacen.py  bacen_focus.py  ibge.py  ipea.py  landing.py  tesouro.py  yahoo.py
ofl/platform/: __init__.py  io.py  lineage.py  logging.py  metrics.py  spark.py
ofl/quality/: __init__.py  contracts.py
ofl/transform/: __init__.py
ofl/transform/gold/: __init__.py  runner.py
ofl/transform/gold/models/: mart_equity_daily.sql  mart_futures_curve.sql  mart_fx.sql  mart_inflation_panel.sql  mart_macro_dashboard.sql  mart_open_interest.sql  mart_real_interest.sql  mart_yield_curve.sql
ofl/transform/spark/: __init__.py  dimensions.py  silver.py
orchestration/airflow/dags/: _alerts.py  ofl_dags.py
sources/: registry.yml
src/: README_LEGACY.md
src/Open_Finance_Lakehouse/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/Open_Finance_Lakehouse/hooks/: __init__.py  disable_mlflow.py  project_hooks.py
src/Open_Finance_Lakehouse/pipelines/anbima/: __init__.py  nodes.py  nodes_simple.py  pipeline.py  pipeline_simple.py
src/Open_Finance_Lakehouse/pipelines/b3/: __init__.py  nodes.py  pipeline.py
src/Open_Finance_Lakehouse/pipelines/bronze/: __init__.py  nodes.py  pipeline.py
src/Open_Finance_Lakehouse/pipelines/cdi/: __init__.py  nodes.py  pipeline.py
src/Open_Finance_Lakehouse/pipelines/common/: __init__.py  nodes.py
src/Open_Finance_Lakehouse/pipelines/divida_pib/: __init__.py  nodes.py  pipeline.py
src/Open_Finance_Lakehouse/pipelines/eur_brl/: __init__.py  nodes.py  pipeline.py
src/Open_Finance_Lakehouse/pipelines/feature/: nodes.py  pipeline.py
src/Open_Finance_Lakehouse/pipelines/focus_pib/: __init__.py  nodes.py  pipeline.py
src/Open_Finance_Lakehouse/pipelines/ibge/: __init__.py  nodes.py  nodes_simple.py  pipeline.py  pipeline_simple.py
src/Open_Finance_Lakehouse/pipelines/igp_10/: __init__.py  (+2 more)
src/Open_Finance_Lakehouse/utils/: anbima_api.py  b3_api.py  bacen_api.py  data_quality.py  ibge_api.py  ibge_api_v2.py  ipea_receita_api.py  pipeline_tracker.py  spark_session.py  tesouro_direto_api.py  yahoo_api.py
tests/: test_anbima.py  test_b3_arquivos.py  test_b3_cotahist.py  test_contracts.py  test_focus.py  test_gold_marts.py  test_ibge.py  test_ipea.py  test_registry.py  test_tesouro.py  test_yahoo.py
tests/pipelines/bronze/: test_pipeline.py
tests/pipelines/data_science/: test_pipeline.py
(+49 files in other folders)
