[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ofl"
version = "0.1.0"
description = "Open-Finance LakeHouse — Brazilian macro & financial data lakehouse (Polars extract / Spark refine / DuckDB serve)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.1",
    "deltalake>=0.21",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "requests>=2.31",
    "structlog>=24.1",
    "pandera>=0.20",
    "boto3>=1.34",
    # Bronze write path: polars.to_arrow() + deltalake.write_deltalake both need
    # pyarrow, and it is not pulled in transitively by deltalake>=0.21 — declare it.
    "pyarrow>=14",
]

# Heavy / lane-specific deps are extras so the core (Polars + DuckDB) installs light.
[project.optional-dependencies]
spark = ["pyspark>=3.5,<3.6", "delta-spark>=3.2,<3.4"]
airflow = ["apache-airflow>=3.0"]
yahoo = ["yfinance>=0.2.40"]
lineage = ["openlineage-python>=1.20"]
dev = [
    "ruff>=0.5",
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
ofl = "ofl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ofl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "PL"]
ignore = ["E501", "PLR0913"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
